--- a/SmartElectricSavingHome/GoogleService-Info-2.plist
+++ b/SmartElectricSavingHome/GoogleService-Info-2.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>1084657038697-pgvfddak20udbnuvhh7s0kfnmeqj5h00.apps.googleusercontent.com</string>
+	<string>94278567674-urari5i1s58dbuufa7cba5l3vjegcp6u.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1084657038697-pgvfddak20udbnuvhh7s0kfnmeqj5h00</string>
+	<string>com.googleusercontent.apps.94278567674-urari5i1s58dbuufa7cba5l3vjegcp6u</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD5dYYlNg-M0SmmxxwOZ_DWu5CwnTyzVAY</string>
+	<string>AIzaSyAKlxkXD7Ac6u7VTSVNRkxSl-rltvhbwmk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1084657038697</string>
+	<string>94278567674</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>SESH.SmartElectricSavingHome</string>
 	<key>PROJECT_ID</key>
-	<string>smartelectricsavinghome-cfffe</string>
+	<string>sesh-28b51</string>
 	<key>STORAGE_BUCKET</key>
-	<string>smartelectricsavinghome-cfffe.appspot.com</string>
+	<string>sesh-28b51.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1084657038697:ios:fb2717642636f1c1</string>
+	<string>1:94278567674:ios:fb2717642636f1c1</string>
 	<key>DATABASE_URL</key>
-	<string>https://smartelectricsavinghome-cfffe.firebaseio.com</string>
+	<string>https://sesh-28b51.firebaseio.com</string>
 </dict>
 </plist>
